--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "fastmcp>=2.10.6",
+    "httpx>=0.28.1",
+    "ipykernel>=6.30.0",
+    "jupyter>=1.1.1",
+    "pyngrok>=7.2.12",
+    "python-dotenv>=1.1.1",
+]
